# effect-desktop

./: .gitattributes  .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  EFFECT_DESKTOP_0_TO_1_BUILD_SPEC.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  SECURITY.md  bunfig.toml  goal.md  issues.json  llms.txt  oxfmt.config.ts  oxlint.config.ts  oxlint.json  package.json  tsconfig.base.json  turbo.json
.depot/workflows/: ci.yml  release.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs-deploy.yml  release.yml
api/: breaking-change-policy.md
api/snapshots/: @effect-desktop__astro.snapshot.json  @effect-desktop__bridge.snapshot.json  @effect-desktop__cli.snapshot.json  @effect-desktop__config.snapshot.json  @effect-desktop__core.snapshot.json  @effect-desktop__devtools.snapshot.json  @effect-desktop__native.snapshot.json  @effect-desktop__next.snapshot.json  @effect-desktop__platform-browser.snapshot.json  @effect-desktop__react.snapshot.json  @effect-desktop__solid.snapshot.json  @effect-desktop__test.snapshot.json  @effect-desktop__vite.snapshot.json  @effect-desktop__vue.snapshot.json  @orika__bridge.snapshot.json  @orika__cli.snapshot.json  @orika__config.snapshot.json  @orika__core.snapshot.json  @orika__devtools.snapshot.json  @orika__native.snapshot.json  @orika__next.snapshot.json  @orika__platform-browser.snapshot.json  @orika__react.snapshot.json  @orika__solid.snapshot.json  @orika__test.snapshot.json  @orika__vite.snapshot.json  @orika__vue.snapshot.json  create-effect-desktop.snapshot.json
apps/docs/: .gitignore  README.md  alchemy.run.ts  mdx-components.tsx  next.config.mjs  package.json  source.config.ts  tsconfig.json  worker.ts
apps/examples/: README.md
apps/inspector/: desktop.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/playground/: .gitignore  README.md  desktop.config.ts  index.html  mdx-components.tsx  next.config.mjs  package.json  source.config.ts  tsconfig.json  vite.config.ts
crates/host/: Cargo.toml  README.md  build.rs
crates/host-protocol/: Cargo.toml  README.md  build.rs
crates/host/src/: assets.rs  csp.rs  html_csp.rs  lib.rs  linux.rs  macos.rs  main.rs  scheme.rs  webview.rs  window.rs  windows.rs
crates/host/src/methods/: activation_registry.rs  app.rs  app_metadata.rs  association.rs  attachment_intake.rs  autostart.rs  browsing_data.rs  clipboard.rs  context_menu.rs  cookie_store.rs  crash_reporter.rs  diagnostics_bundle.rs  dialog.rs  display_capture.rs  distribution_parity.rs  dock.rs  download.rs  egress_policy.rs  execution_sandbox.rs  extension_config.rs  extension_package.rs  focused_application_context.rs  handshake.rs  job.rs  local_tool_runtime.rs  menu.rs  mod.rs  native_file_system.rs  native_network.rs  network_auth.rs  notification.rs  open_intent.rs  path.rs  power_monitor.rs  protocol.rs  pty.rs  realtime_media_session.rs  recent_documents.rs  resident_lifecycle.rs  safe_storage.rs  (+15 more)
crates/host/src/runtime/: mod.rs  platform.rs
crates/host/src/transport/: framed.rs  mod.rs
crates/host/tests/: startup_smoke.rs
crates/native-pty/: Cargo.toml  README.md
crates/native-pty/src/: lib.rs
crates/native-updater/: Cargo.toml  README.md
crates/native-updater/src/: audit.rs  lib.rs  manifest.rs  policy.rs  restart.rs  staging.rs  tests.rs
docs/: README.md  SPEC.md  app-config.md  architecture-overview.md  bridge.md  commands.md  concepts.md  contribution-guide.md  devtools.md  docs-manifest.json  filesystem.md  installation.md  llms.txt  native-services.md  packaging.md  permissions.md  processes.md  ptys.md  quickstart.md  resources.md  signing.md  storage.md  testing.md  troubleshooting.md  typed-apis.md  updating.md  verification-matrix.json  windows.md
docs/.well-known/: security.txt
docs/architecture/: layer-first-contract.md
docs/contributing/: architecture-debt.md  docs.md
docs/decisions/: adr-0000-template.md  adr-0001-schema-v4-audit.md  adr-0002-rpc-effect-unstable-rpc.md  adr-0003-sql-effect-unstable-sql.md  adr-0005-keyvaluestore-settings.md  adr-0008-eventlog.md  adr-0009-workflow.md  adr-0010-cli-effect-unstable-cli.md  adr-0011-logger-config-console.md  adr-0012-http-app-protocol.md  adr-0014-atom-react.md  adr-0016-platform-browser-indexeddb.md  adr-0017-pglite-renderer.md  adr-0018-cluster-multi-window.md  adr-0019-adopt-effect-platform-bun.md  adr-0020-adopt-effect-sql-sqlite-bun.md  adr-0022-rpcgroup-desktop-app-boundary.md  adr-0023-cross-framework-notes-examples.md
docs/explanation/: architecture.md  audit-and-redaction.md  boundary-rule.md  effect-first-philosophy.md  layer-first-design.md  permissions-model.md  resource-lifecycle.md  rpc-surface-vs-mapped.md  testability.md
docs/how-to/: add-a-window.md  add-telemetry-and-logs.md  declare-a-permission.md  define-an-rpc-surface.md  diagnose-with-doctor.md  handle-an-approval-prompt.md  inject-mock-host-and-bridge.md  integrate-native-services.md  open-a-pty.md  package-for-macos.md  persist-settings.md  read-write-files.md  run-a-child-process.md  schedule-background-jobs.md  ship-an-update.md  sign-and-notarize.md  spawn-a-worker.md  store-secrets.md  use-sqlite.md  write-a-test-with-layers.md
docs/learnings/: 2026-05-04-add-bun-runtime-entry-binary.md  2026-05-04-capture-phase-1-milestone.md  2026-05-04-capture-phase-2-milestone.md  2026-05-04-embed-playground-renderer-assets.md  2026-05-04-open-tao-native-window.md  2026-05-04-phase-0-repository-bootstrap.md  2026-05-04-register-app-scheme-handler.md  2026-05-04-wire-host-native-dependency-skeleton.md  (+236 more)
docs/reference/: README.md  (+7 more)
engineering/: SPEC.md  verification-matrix.json
release/: accessibility.json  checklist.json  semver.json
scripts/: generate-native-parity-matrix.ts  pack-installable-cli.test.ts  pack-installable-cli.ts  patch-effect-tsgo.ts
tests/: layer-first-contract.test.ts  repo-shape.test.ts
(+912 files in other folders)
