[workspace]
members = ["crates/host", "crates/host-protocol", "crates/native-pty", "crates/native-updater"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rika-Labs/effect-desktop"

[workspace.dependencies]
anyhow = "1.0.102"
libc = "0.2"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao = "0.35.2"
tracing = "0.1"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4", "v7"] }
windows-sys = "0.61.2"
wry = "0.55.1"
