[package]
name = "host"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
host-protocol = { path = "../host-protocol" }
lol_html = "2.9"
serde.workspace = true
serde_json.workspace = true
tao.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
wry.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.19.1"
window-vibrancy = "0.6.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Shell"
] }

[build-dependencies]
serde_json.workspace = true
