[package]
name = "host"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
cpal = "0.17.3"
host-protocol = { path = "../host-protocol" }
lol_html = "2.9"
rfd = { version = "0.17.2", features = ["common-controls-v6"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tao.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
wry.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.17.0"

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.19.1"
tray-icon = "0.24.0"
window-vibrancy = "0.6.0"

[target.'cfg(windows)'.dependencies]
tray-icon = { version = "0.24.0", features = ["common-controls-v6"] }
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_JobObjects",
  "Win32_System_Memory",
  "Win32_System_Pipes",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Shell"
] }

[build-dependencies]
serde_json.workspace = true
