[package]
name = "native-pty"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]

[dependencies]
anyhow.workspace = true
libc.workspace = true
portable-pty.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading"
] }
