[package]
name = "native-updater"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]

[dependencies]
base64 = "0.22.1"
ed25519-dalek = "2.2.0"
semver = "1.0.28"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Storage_FileSystem"] }
